fix preloader glitch on mobile browser

--- a/js/src/modules/style.scss
+++ b/js/src/modules/style.scss
@@ -36,7 +36,7 @@ html, body {
   background: rgba(0,0,0,.85);
   width: 100%;
   height: 100vh;
-  z-index: 0;
+  z-index: 0!important;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -46,24 +46,21 @@ html, body {
     margin: auto 0;
     width: 70px;
     text-align: center;
-  }
-  
-  .spinner > div {
-    width: 18px;
-    height: 18px;
-    background-color: $yellow;
-  
-    border-radius: 100%;
-    display: inline-block;
-    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-  }
-  
-  .spinner .bounce1 {
-    animation-delay: -0.32s;
-  }
-  
-  .spinner .bounce2 {
-    animation-delay: -0.16s;
+
+    & > div {
+      width: 18px;
+      height: 18px;
+      background-color: $yellow;
+      border-radius: 100%;
+      display: inline-block;
+      animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+    }
+    .bounce1 {
+      animation-delay: -0.32s;
+    }
+    .bounce2 {
+      animation-delay: -0.16s;
+    }
   }
   
   @keyframes sk-bouncedelay {
@@ -166,7 +163,7 @@ html, body {
 }
 
 .photo-app {
-  z-index: 1;
+  z-index: 10;
   display: flex;
   width: 100vw;
   height: 100vh;
